# routers/PostsRouter.ts
@@ -1,29 +1,22 @@
-import { Router } from 'express';
-import PostsController  from '../controllers/PostsController';
-import { authMiddleware } from '../middleware/AuthMiddleware';
-import bodyParser from 'body-parser';
-import multer from 'multer';
-import path from 'path';
-import { v4 } from 'uuid';
-import { body } from 'express-validator';
-import { required } from '../middleware/ValdiationMiddlewares';
+import { Router } from "express";
+import PostsController from "../controllers/PostsController";
+import { authMiddleware } from "../middleware/AuthMiddleware";
+import bodyParser from "body-parser";
+import multer from "multer";
+import { requiredOr } from "../middleware/ValdiationMiddlewares";
 
 const router = Router();
 
-const upload = multer({ dest: 'videos/' });
+const upload = multer({ dest: "attachedData/" });
 
 router.post(
-  '/create',
-  upload.single('video'),
+  "/create",
+  upload.single("attached"),
   bodyParser.urlencoded({ extended: true }),
   authMiddleware,
-  [
-    required('title'),
-    required('description'),
-    required('shortDescription'),
-  ],
+  [requiredOr(["text", "attached"])],
   PostsController.createPost
 );
-router.get('/', PostsController.getPosts);
+router.get("/", authMiddleware, PostsController.getPosts);
 
 export default router;
